Update GUI.java